# music-detect

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
cmake/: FindLibTorch.cmake
data/locale/: en-US.ini
include/: audio-io.h  audio-resampler.h
src/: inference.cpp  inference.hpp  labels.cpp  labels.hpp  log.h  music-filter.cpp  music-filter.hpp  network.cpp  network.hpp  plugin-main.cpp
